samples/_failures_safe/1761627931_41b4c6_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a4b03c97.c: In function ‘handle_event’:
./samples/SAFE/__tmp_a4b03c97.c:142:5: error: expected expression at end of input
  142 |     printf("Transition: %s -> %s (Event: %d)\n",
      |     ^~~~~~
./samples/SAFE/__tmp_a4b03c97.c:142:5: error: expected declaration or statement at end of input
